UX: show list dropdown on mobile

--- a/app/assets/stylesheets/common/components/toolbar-popup-menu-options.scss
+++ b/app/assets/stylesheets/common/components/toolbar-popup-menu-options.scss
@@ -1,5 +1,5 @@
-[data-identifier="toolbar-menu__more-options"][data-content],
-[data-identifier="toolbar-menu__list-options"][data-content] {
+[data-identifier="toolbar-menu__more"][data-content],
+[data-identifier="toolbar-menu__list"][data-content] {
   z-index: z("composer", "dropdown") + 1;
 
   .d-button-label {
