--- a/plugins/poll/assets/stylesheets/common/poll.scss
+++ b/plugins/poll/assets/stylesheets/common/poll.scss
@@ -494,8 +494,9 @@ div.poll-outer {
   }
 }
 
-.d-editor__editable {
+.ProseMirror {
   .poll {
+    margin-bottom: 1rem;
     ul {
       list-style-type: none;
       padding: 0;
@@ -569,7 +570,7 @@ body.crawler {
   }
 }
 
-.d-editor__editable .poll {
+.ProseMirror .poll {
   border: 1px solid var(--primary-low);
   border-radius: var(--d-border-radius);
   padding: 1rem;
